linux/roles/wod.k8s-drone/templates/drone.yml
---
# Source: drone/templates/drone-server/drone-server.svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: drone-server
  namespace: devops
spec:
  selector:
    app: drone-server
  ports:
  - name: http
    port: 9000
---
# Source: drone/templates/drone-agent/drone-agent.ds.yml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: drone-agent
  namespace: devops
spec:
  template:
    metadata:
      labels:
        app: drone-agent
        version: "0.8.4"
    spec:
      containers:
      - name: drone-agent
        image: "harbor.wodcloud.com/cloud/drone-server:0.8.4-4"
        imagePullPolicy: Always
        volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock
        securityContext:
          privileged: true
      volumes:      
      - name: docker
        hostPath:
          path: /var/run/docker.sock
---
# Source: drone/templates/drone-server/drone-server.dp.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  namespace: devops
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-server
        version: "0.8.4"
    spec:
      containers:
      - name: drone-server
        image: "harbor.wodcloud.com/cloud/drone-server:0.8.4-4"
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        - containerPort: 9000
        volumeMounts:
        - name: sqlite
          mountPath: /var/lib/drone
        - name: src
          mountPath: /drone/src
        - name: secret
          mountPath: /drone/secrets
        securityContext:
          privileged: true
      volumes:      
      - name: sqlite
        persistentVolumeClaim:
          claimName: drone-server
      - name: src
        hostPath:
          path: /data/devops/drone/src
      - name: secret
        configMap:
          name: drone-secrets
          items:
          - key: global.secrets.json
            path: global.secrets.json
          - key: global.env.yaml
            path: global.env.yaml   
---
# Source: drone/templates/drone/drone.ig.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  namespace: devops
spec:
  rules:
  - host: "drone.wodcloud.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: drone-server
          servicePort: 8000
